k8s/backend-deployment.yaml
# backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: idurar-erp-crm-deployment-risks-backend
          imagePullPolicy: Never
          ports:
            - containerPort: 8888
          command: ["sh", "-c", "npm run setup && npm run dev"]
          volumeMounts:
            - name: pdf-storage
              mountPath: /usr/src/app/pdf-storage
          resources:
            limits:
              memory: "1Gi"
              cpu: "500m"
            requests:
              memory: "512Mi"
              cpu: "250m"
      volumes:
        - name: pdf-storage
          persistentVolumeClaim:
            claimName: pdf-storage-pvc
