k8s/pdf-worker-deployment.yaml
# pdf-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pdf-worker
spec:
  selector:
    matchLabels:
      app: pdf-worker
  replicas: 1
  template:
    metadata:
      labels:
        app: pdf-worker
    spec:
      containers:
        - name: pdf-worker
          image: idurar-erp-crm-deployment-risks-pdf-worker
          imagePullPolicy: Never
          command: ["node", "src/workers/pdfWorker.js"]
          volumeMounts:
            - name: pdf-storage
              mountPath: /usr/src/app/pdf-storage
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
      volumes:
        - name: pdf-storage
          persistentVolumeClaim:
            claimName: pdf-storage-pvc
